--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production",
+    "start": "webpack --mode production",
+    "build": "webpack-dev-server --mode development --open --hot",
     "lint": "eslint src/",
     "server": "http-server dist"
   },
